test/kubernetes/e2e/features/tracing/testdata/gateway.yaml
# Avoid using the default gateway because we don't want to destroy it when this
# test is over - that will break other tests that depend on the default gateway
# existing.
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
    app.kubernetes.io/name: gateway-proxy-tracing
  name: gateway-proxy-tracing
spec:
  bindAddress: '::'
  bindPort: 18080
  proxyNames:
    - gateway-proxy
  httpGateway:
    virtualServiceSelector:
      gateway-type: tracing
    options:
      httpConnectionManagerSettings:
        tracing:
          openTelemetryConfig:
            collectorUpstreamRef:
              name: opentelemetry-collector
              namespace: default
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-proxy-tracing
  labels:
    app.kubernetes.io/name: gateway-proxy-tracing-service
spec:
  ports:
  - name: gateway-proxy-tracing
    port: 18080
    protocol: TCP
    targetPort: 18080
  selector:
    gateway-proxy: live
    gateway-proxy-id: gateway-proxy
