test/kubernetes/e2e/features/tracing/testdata/tracing.yaml
# gloo resources
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: echo-server
spec:
  # useHttp2: true
  kube:
    selector:
      app.kubernetes.io/name: http-echo
    serviceName: http-echo
    serviceNamespace: http-echo
    servicePort: 3000
---
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: "opentelemetry-collector"
  namespace: default
spec:
  # OpenTelemetry collector requires HTTP/2:
  # https://github.com/open-telemetry/opentelemetry-collector/issues/1916
  useHttp2: true
  kube:
    selector:
      app.kubernetes.io/name: otel-collector
    serviceName: otel-collector
    serviceNamespace: default
    servicePort: 4317
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  labels:
    gateway-type: tracing
spec:
  virtualHost:
    domains:
    - '*'
    options:
      stagedTransformations:
        regular:
          requestTransforms:
            - requestTransformation:
                transformationTemplate:
                  headers:
                    test_header:
                      text: test_value
                  spanTransformer:
                    name:
                      text: '{{header("Host")}}'
    routes:
    - matchers:
       - prefix: /path/without/route/descriptor
      routeAction:
        single:
          upstream:
            name: echo-server
            namespace: default
      options:
        autoHostRewrite: true
    - matchers:
       - prefix: /path/with/route/descriptor
      routeAction:
        single:
          upstream:
            name: echo-server
            namespace: default
      options:
        autoHostRewrite: true
        tracing:
          routeDescriptor: THISISAROUTEDESCRIPTOR
